# MILLIE

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  millie.settings  pyproject.toml  requirements.txt  tmp_microsoft_oauth.sh  tmp_microsoft_oauth_server.js  tmp_settings.sh  tmp_settings_crypto.js  tmp_settings_server.js
.private/: README.md  questions-and-risks.md
.tasks/: README.md
docs/: README.md  api.md  architecture.md  automation.md  backup.md  data-model.md  database-recovery.md  development.md  exchange-graph.md  export.md  imap-facade.md  imap.md  mail-import.md  mail-service.md  outlook.md  pop.md  profiles.md  pst.md  roadmap.md  security.md  settings.md  source-scanning.md  webmail.md
millie/: __init__.py  mail_providers.py  settings_loader.py
tests/: test_apply_suggestions.py  test_automation_levels.py  test_brain_observe.py  test_brain_proposals.py  test_brain_schema.py  test_classification_review_buckets.py  test_cleanup_empty.py  test_core.py  test_imap_listener.py  test_llm_taxonomy.py  test_mail_pipeline.py  test_mail_providers.py  test_postgres_safety.py  test_provider_guardrails.py  test_provider_visible_purge_snapshot.py  test_retention_scan.py  test_search_rebuild.py  test_service_facade.py  test_smtp_listener.py  test_taxonomy_folders.py
tools/: mail_import_plan.py  millie_apply_retention.py  millie_apply_suggestions.py  millie_classification_review_buckets.py  millie_cleanup_empty.py  millie_dedupe_report.py  millie_gmail_label_alias_sync.py  millie_hourly_provider_purge.py  millie_identity_plan.py  (+20 more)
(+88 files in other folders)
