[project]
name = "millie"
version = "0.1.0"
description = "Portable email ingestion, storage, viewing, and export toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
millie = "millie.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
